--- a/2yt/index.html
+++ b/2yt/index.html
@@ -427,7 +427,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>YouTube Crossfader</h1>
+        <h1>YouTube DJ</h1>
 
         <div class="videos-wrapper">
             <div class="video-container">
@@ -471,7 +471,7 @@
         </div>
 
         <p class="instructions">
-            Search for videos above. Click "Load A" or "Load B" to load them into the players.
+            Search for videos above. Click "A" or "B" to load them into the players.
         </p>
     </div>
 
