--- a/oura/index.html
+++ b/oura/index.html
@@ -565,7 +565,7 @@
             authUrl: 'https://cloud.ouraring.com/oauth/authorize',
             // Use proxy to avoid CORS issues (direct API doesn't allow browser requests)
             // Deploy cloudflare-worker.js and update this URL:
-            apiBase: 'https://oura-proxy.galk.workers.dev/v2',
+            apiBase: 'https://proud-tooth-c429.galkatz.workers.dev/',
             // Direct API (blocked by CORS):
             // apiBase: 'https://api.ouraring.com/v2',
             scopes: 'daily heartrate workout session spo2 ring_configuration stress heart_health',
